src/components/transactions/BulkTxListGroup/styles.module.css
.container {
  position: relative;
  padding: var(--space-2);
  align-items: center;
}

.txItems {
  display: flex;
  flex-direction: column;
  gap: var(--space-1);
  margin-top: var(--space-2);
  width: 100%;
}

.container :global(.MuiAccordion-root) {
  border-color: var(--color-border-light);
}

.disclaimerContainer {
  background-color: var(--color-warning-background);
  padding: var(--space-1) var(--space-2);
  border-radius: var(--space-1);
  flex: 1;
}

/* @media (max-width: 1024px) {
  .container {
    gap: var(--space-1);
    grid-template-columns: 1fr;
    grid-template-areas:
      'nonce warning warning'
      'items items items';
  }
} */

